[project]
name = "mask-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tensorflow>=1.15.2",
    "keras==2.3.1",
    "imutils==0.5.3",
    "numpy==1.18.2",
    "opencv-python==4.2.0.34",
    "argparse==1.1",
    "scipy==1.4.1",
    "protobuf==3.20.*",
    "scikit-learn>=1.2.2",
		"matplotlib==3.2.1",
]

[tool.uv.workspace]
members = ["mask-detection"]
